--- a/docs/user-guide/usage.ipynb
+++ b/docs/user-guide/usage.ipynb
@@ -182,7 +182,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/chekos/datasets/master/data/datawrapper_example.csv\", sep=';')\n",
+    "df = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/chekos/datasets/master/data/datawrapper_example.csv\",\n",
+    "    sep=\";\",\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -208,7 +211,9 @@
     }
    ],
    "source": [
-    "chart_info = dw.create_chart(title = 'Where do people live?', chart_type = 'd3-bars-stacked', data = df)"
+    "chart_info = dw.create_chart(\n",
+    "    title=\"Where do people live?\", chart_type=\"d3-bars-stacked\", data=df\n",
+    ")"
    ]
   },
   {
@@ -262,10 +267,10 @@
    ],
    "source": [
     "dw.update_description(\n",
-    "    chart_info['id'],\n",
-    "    source_name = 'UN Population Division',\n",
-    "    source_url = 'https://population.un.org/wup/',\n",
-    "    byline = 'datawrapper at pypi',\n",
+    "    chart_info[\"id\"],\n",
+    "    source_name=\"UN Population Division\",\n",
+    "    source_url=\"https://population.un.org/wup/\",\n",
+    "    byline=\"datawrapper at pypi\",\n",
     ")"
    ]
   },
@@ -306,7 +311,7 @@
     }
    ],
    "source": [
-    "dw.publish_chart(chart_id = chart_info['id'])"
+    "dw.publish_chart(chart_id=chart_info[\"id\"])"
    ]
   },
   {
@@ -338,16 +343,16 @@
    ],
    "source": [
     "properties = {\n",
-    "    'visualize' : {\n",
-    "        'thick': True,\n",
-    "        'custom-colors': {\n",
-    "            'in rural areas': '#dadada',\n",
-    "            'in other urban areas': '#1d81a2',\n",
-    "            'Share of population that lives in the capital': '#15607a'\n",
+    "    \"visualize\": {\n",
+    "        \"thick\": True,\n",
+    "        \"custom-colors\": {\n",
+    "            \"in rural areas\": \"#dadada\",\n",
+    "            \"in other urban areas\": \"#1d81a2\",\n",
+    "            \"Share of population that lives in the capital\": \"#15607a\",\n",
     "        },\n",
     "    }\n",
     "}\n",
-    "dw.update_metadata(chart_info['id'], properties)"
+    "dw.update_metadata(chart_info[\"id\"], properties)"
    ]
   },
   {
@@ -377,7 +382,7 @@
     }
    ],
    "source": [
-    "dw.publish_chart(chart_info['id'])"
+    "dw.publish_chart(chart_info[\"id\"])"
    ]
   },
   {
@@ -405,7 +410,7 @@
     }
    ],
    "source": [
-    "dw.export_chart(\"OsgIU\", output = 'png', filepath = 'chart.png', display = True)"
+    "dw.export_chart(\"OsgIU\", output=\"png\", filepath=\"chart.png\", display=True)"
    ]
   }
  ],
